packages/optimizer/core/src/snapshots/qwik_core__test__example_dev_mode_inlined.snap
---
source: packages/optimizer/core/src/test.rs
assertion_line: 2322
expression: output
---
==INPUT==


import { component$, useStore } from '@qwik.dev/core';

export const App = component$(() => {
	return (
		<Cmp>
			<p class="stuff" onClick$={() => console.log('warn')}>Hello Qwik</p>
		</Cmp>
	);
});

============================= test.js ==

import { componentQrl } from "@qwik.dev/core";
import { _noopQrlDEV } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
//
const q_App_component_Cmp_p_q_e_click_Yl4ybrJWrt4 = /*#__PURE__*/ _noopQrlDEV("App_component_Cmp_p_q_e_click_Yl4ybrJWrt4", {
    file: "/user/qwik/src/test.tsx",
    lo: 144,
    hi: 169,
    displayName: "test.tsx_App_component_Cmp_p_q_e_click"
});
const q_App_component_ckEPmXZlub0 = /*#__PURE__*/ _noopQrlDEV("App_component_ckEPmXZlub0", {
    file: "/user/qwik/src/test.tsx",
    lo: 88,
    hi: 200,
    displayName: "test.tsx_App_component"
});
//
q_App_component_Cmp_p_q_e_click_Yl4ybrJWrt4.s(()=>console.log('warn'));
q_App_component_ckEPmXZlub0.s(()=>{
    return /*#__PURE__*/ _jsxSorted(Cmp, null, null, /*#__PURE__*/ _jsxSorted("p", null, {
        class: "stuff",
        "q-e:click": q_App_component_Cmp_p_q_e_click_Yl4ybrJWrt4
    }, "Hello Qwik", 3, null, {
        fileName: "test.tsx",
        lineNumber: 7,
        columnNumber: 4
    }), 3, "u6_0", {
        fileName: "test.tsx",
        lineNumber: 6,
        columnNumber: 3
    });
});
export const App = /*#__PURE__*/ componentQrl(q_App_component_ckEPmXZlub0);


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;;;;;;;;;;;;;8CAM8B,IAAM,QAAQ,GAAG,CAAC;8BAHlB;IAC7B,qBACC,WAAC,+BACA,WAAC;QAAE,OAAM;QAAQ,WAAQ;OAA6B;;;;;;;;;AAGzD;AANA,OAAO,MAAM,oBAAM,0CAMhB\"}")
== DIAGNOSTICS ==

[]
