packages/optimizer/core/src/snapshots/qwik_core__test__example_functional_component_2.snap
---
source: packages/optimizer/core/src/test.rs
expression: output
---
==INPUT==


import { $, component$, useStore } from '@qwik.dev/core';
export const useCounter = () => {
	return useStore({count: 0});
}

export const STEP = 1;

export const App = component$((props) => {
	const state = useCounter();
	const thing = useStore({thing: 0});
	const STEP_2 = 2;

	const count2 = state.count * 2;
	return (
		<div onClick$={() => state.count+=count2 }>
			<span>{state.count}</span>
			{buttons.map(btn => (
				<button
					onClick$={() => state.count += btn.offset + thing + STEP + STEP_2 + props.step}
				>
					{btn.name}
				</button>
			))}

		</div>

	);
})

============================= test.js ==

import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { useStore } from '@qwik.dev/core';
//
const q_App_component_ckEPmXZlub0 = /*#__PURE__*/ qrl(()=>import("./test.tsx_App_component_ckEPmXZlub0"), "App_component_ckEPmXZlub0");
//
export const useCounter = ()=>{
    return useStore({
        count: 0
    });
};
export const STEP = 1;
export const App = /*#__PURE__*/ componentQrl(q_App_component_ckEPmXZlub0);


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;AACA,SAAwB,QAAQ,QAAQ,iBAAiB;;;;AACzD,OAAO,MAAM,aAAa;IACzB,OAAO,SAAS;QAAC,OAAO;IAAC;AAC1B,EAAC;AAED,OAAO,MAAM,OAAO,EAAE;AAEtB,OAAO,MAAM,oBAAM,0CAoBjB\"}")
============================= test.tsx_App_component_ckEPmXZlub0.js (ENTRY POINT)==

import { useCounter } from "./test";
import { _jsxSorted } from "@qwik.dev/core";
import { _wrapProp } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { useStore } from "@qwik.dev/core";
//
const q_App_component_div_button_q_e_click_UB6Fs5a3bd8 = /*#__PURE__*/ qrl(()=>import("./test.tsx_App_component_div_button_q_e_click_UB6Fs5a3bd8"), "App_component_div_button_q_e_click_UB6Fs5a3bd8").m();
const q_App_component_div_q_e_click_mi4E1piTWe8 = /*#__PURE__*/ qrl(()=>import("./test.tsx_App_component_div_q_e_click_mi4E1piTWe8"), "App_component_div_q_e_click_mi4E1piTWe8").m();
//
export const App_component_ckEPmXZlub0 = (props)=>{
    const state = useCounter();
    const thing = useStore({
        thing: 0
    });
    const count2 = state.count * 2;
    const App_component_div_button_q_e_click_UB6Fs5a3bd8 = q_App_component_div_button_q_e_click_UB6Fs5a3bd8.w([
        props,
        state,
        thing
    ]);
    return /*#__PURE__*/ _jsxSorted("div", {
        "q-e:click": q_App_component_div_q_e_click_mi4E1piTWe8,
        "q:ps": [
            count2,
            state
        ]
    }, null, [
        /*#__PURE__*/ _jsxSorted("span", null, null, _wrapProp(state, "count"), 3, null),
        buttons.map((btn)=>/*#__PURE__*/ _jsxSorted("button", {
                "q-e:click": App_component_div_button_q_e_click_UB6Fs5a3bd8,
                "q:p": btn
            }, null, _wrapProp(btn, "name"), 4, "u6_0"))
    ], 4, "u6_1");
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;;;;;yCAQ8B,CAAC;IAC9B,MAAM,QAAQ;IACd,MAAM,QAAQ,SAAS;QAAC,OAAO;IAAC;IAGhC,MAAM,SAAS,MAAM,KAAK,GAAG;;;;;;IAC7B,qBACC,WAAC;QAAI,WAAQ;;;;;;sBACZ,WAAC,8BAAM;QACN,QAAQ,GAAG,CAAC,CAAA,oBACZ,WAAC;gBACA,WAAQ;uBAFG;+BAIV;;AAON\"}")
/*
{
  "origin": "test.tsx",
  "name": "App_component_ckEPmXZlub0",
  "entry": null,
  "displayName": "test.tsx_App_component",
  "hash": "ckEPmXZlub0",
  "canonicalFilename": "test.tsx_App_component_ckEPmXZlub0",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    181,
    580
  ],
  "paramNames": [
    "props"
  ]
}
*/
============================= test.tsx_App_component_div_button_q_e_click_UB6Fs5a3bd8.js (ENTRY POINT)==

import { _capturesObj } from "@qwik.dev/core";
import { STEP } from "./test";
//
export const App_component_div_button_q_e_click_UB6Fs5a3bd8 = (_, _1, btn)=>{
    let props = _capturesObj._[0], state = _capturesObj._[1], thing = _capturesObj._[2];
    return state.count += btn.offset + thing + STEP + 2 + props.step;
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;8DAmBe,QAFC;;WAEK,MAAM,KAAK,IAAI,IAAI,MAAM,GAAG,QAAQ,OARzC,IAQyD,MAAM,IAAI\"}")
/*
{
  "origin": "test.tsx",
  "name": "App_component_div_button_q_e_click_UB6Fs5a3bd8",
  "entry": null,
  "displayName": "test.tsx_App_component_div_button_q_e_click",
  "hash": "UB6Fs5a3bd8",
  "canonicalFilename": "test.tsx_App_component_div_button_q_e_click_UB6Fs5a3bd8",
  "path": "",
  "extension": "js",
  "parent": "App_component_ckEPmXZlub0",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": true,
  "loc": [
    451,
    519
  ],
  "paramNames": [
    "_",
    "_1",
    "btn"
  ],
  "captureNames": [
    "props",
    "state",
    "thing"
  ]
}
*/
============================= test.tsx_App_component_div_q_e_click_mi4E1piTWe8.js (ENTRY POINT)==

export const App_component_div_q_e_click_mi4E1piTWe8 = (_, _1, count2, state)=>state.count += count2;


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\"uDAeiB,wBAAM,MAAM,KAAK,IAAE\"}")
/*
{
  "origin": "test.tsx",
  "name": "App_component_div_q_e_click_mi4E1piTWe8",
  "entry": null,
  "displayName": "test.tsx_App_component_div_q_e_click",
  "hash": "mi4E1piTWe8",
  "canonicalFilename": "test.tsx_App_component_div_q_e_click_mi4E1piTWe8",
  "path": "",
  "extension": "js",
  "parent": "App_component_ckEPmXZlub0",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": false,
  "loc": [
    340,
    365
  ],
  "paramNames": [
    "_",
    "_1",
    "count2",
    "state"
  ]
}
*/
== DIAGNOSTICS ==

[]
